--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  dio: ^3.0.9
+  flutter_modular: ^1.0.0
+  flutter_mobx: ^1.0.1
+  mobx: ^1.0.2+1
   flutter:
     sdk: flutter
 
@@ -30,6 +34,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  mobx_codegen: ^1.0.2
+  build_runner: ^1.8.0
   flutter_test:
     sdk: flutter
 
