--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_modular: ^1.0.0
   flutter_mobx: ^1.0.1
   mobx: ^1.0.2+1
+  validadores: ^0.0.1
   flutter:
     sdk: flutter
 
