--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_mobx: ^1.0.1
   mobx: ^1.0.2+1
   validadores: ^0.0.1
+  flutter_secure_storage: ^3.3.3
   flutter:
     sdk: flutter
 
