--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
     - imgs/login.jpg
     - imgs/logo_login.png
     - imgs/facebook.png
+    - imgs/image-not-found.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
