--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   dio: ^3.0.9
+  google_maps_flutter: ^0.5.28+1
+  geolocator: ^5.3.2+2
   flutter_modular: ^1.0.0
   flutter_mobx: ^1.0.1
   mobx: ^1.0.2+1
