--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   dio: ^3.0.9
+  image_picker: ^0.6.7+2
+  brasil_fields: ^0.2.0
   google_maps_flutter: ^0.5.28+1
   geolocator: ^5.3.2+2
   flutter_modular: ^1.0.0
