:pencil: update login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   intl: ^0.15.6
   dio: ^3.0.9
+  settings_ui: ^0.3.0
   image_picker: ^0.6.7+2
   brasil_fields: ^0.2.0
   google_maps_flutter: ^0.5.28+1
