--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,13 @@ dependencies:
   intl: ^0.15.6
   dio: ^3.0.9
   settings_ui: ^0.3.0
-  image_picker: ^0.6.7+2
+  image_picker: ^0.6.7+14
   brasil_fields: ^0.2.0
   google_maps_flutter: ^0.5.28+1
   geolocator: ^5.3.2+2
-  flutter_modular: ^1.0.0
-  flutter_mobx: ^1.0.1
-  mobx: ^1.0.2+1
+  flutter_modular: ^2.0.1
+  flutter_mobx: ^1.1.0+2
+  mobx: ^1.2.1+4
   validadores: ^0.0.1
   flutter_secure_storage: ^3.3.3
   carousel_pro: ^1.0.0
@@ -43,8 +43,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  mobx_codegen: ^1.0.2
-  build_runner: ^1.8.0
+  mobx_codegen: ^1.1.2
+  build_runner: ^1.10.6
   flutter_test:
     sdk: flutter
 
